# emi

./: .gitignore  Cargo.toml  README.md  emi-front-34d410d7df947b97.js  emi-front-34d410d7df947b97_bg.wasm  index.html
.github/workflows/: continuous_deployment.yml  continuous_integration.yml
emi-front/: Cargo.toml  index.html
emi-front/src/: app.rs  game_go.rs  main.rs  menu.rs
emi-go/: Cargo.toml
emi-go/src/: board.rs  event.rs  lib.rs
